--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "dreidel-spin",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Jason Clark <jason@jjasonclark.com> (https://jjasonclark.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "prettier": "^1.19.1",
+    "serverless": "^1.58.0",
+    "serverless-azure-functions": "^1.0.2"
+  }
 }
